tests/compile-fail/syntax/missing_type.rs
#[macro_use]
extern crate bitflags;

bitflags! {
    pub struct Flags1 {
        const A = 1;
    }
}
